# Graph-based-Threat-Detection

./: .gitignore  Analysis.md  Makefile  Progress.md  README.md  REPORT.md  Submission.md  UPDATED_PIPELINE.md  data  eval.py  feature.py  generate_presentation.py  generate_score_dist.py  main.py  pipeline_config.json  pyproject.toml  run_experiment.py  validate_scoring.py
.sisyphus/: boulder.json
Graph-based-Threat-Detection/: .gitignore
USENIX_2023/: sample.bib  usenix.aux  usenix.bbl  usenix.blg  usenix.fdb_latexmk  usenix.fls  usenix.out  usenix.tex
analysis/: optimize_weights_holdout.py  refresh_edge_features.py  tabular_vs_graph_ablation.py  test_graph_features.py
figures/: generate_figures.py  regen_score_dist.py
presentation_figures/: SPEAKER_NOTES.md
report/: Analysis.md  Data-Method.tex  Data_and_Experimental_Setup.tex  Dataset_Analysis.md  Draft_Teammate_Report.tex  Extra_Baselines.md  Extra_Baselines_Full.md  Feature_Audit_Post_Fix.md  Feature_Audit_Results.md  Feature_Selection_Analysis.md  Final_Report.tex  Final_Report_Draft.tex  INTEGRATION_GUIDE.md  Methodology.tex  Methods_and_Approach.tex  Mid-Point-Feedback.md  Mid-Point-Requirements.md  Optimizer_Holdout_Validation.md  Project.md  Updated-Mid-Point-Presentation-Layout.md  VGAE_Baseline.md  VGAE_Rationale.md  existing_sections_revisions_draft.tex  feature_selection_metrics_draft.tex  weight_optimization_draft.tex  weight_optimization_eval_draft.tex
results/: comparison_table.md  data_exploration.md  experiment_log.txt  experiment_results.json  summary.txt
scripts/: feature_audit.py  (+5 more)
(+473 files in other folders)
