[project]
name = "graph-based-lateral-movement-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-igraph",
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "scipy",
]

[tool.deptry.package_module_name_map]
python-igraph = "igraph"
scikit-learn = "sklearn"

[tool.ruff]
exclude = ["results/", "analysis_results/", "feature_results/"]

[tool.vulture]
exclude = [".venv/", "data/"]
ignore_names = [
    "approximate_betweenness",
    "combined_edge_features",
    "combined_paths",
    "lanl_dir",
    "method_results",
    "redteam_times",
    "temporal_burst_window_pct",
    "temporal_decay_rate",
    "window_size",
]
